--- a/index.html
+++ b/index.html
@@ -4,25 +4,31 @@
   <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <title>TAZA HAJA (kor)</title>
+  <!-- <script src="list.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/gh/kstost/AudioManager/AudioManager.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/kstost/FontLoader/font_loader.js"></script>
   <script src="main.js"></script>
+
 </head>
 
 <body>
   <div id="context">
-    <div id="container">
-      <div class="all-title" id="tit">TAJA HAJA~!!</div>
+    <div id="container" style="opacity: 0;">
+      <h1 class="all-title" id="tit">TAJA HAJA~!!</h1>
       <div class="score">
-        <div class="tit">맞힌 갯수</div>
-        <div class="ctx">0</div>
+        <div class="tit"><span>맞힌 갯수</span></div>
+        <div class="ctx"><span class="remaining">0</span></div>
       </div>
       <div class="contents">
         <div class="title" id="show-text"></div>
+        <div class="message"></div>
       </div>
       <input type="text" id="input-typing" autocomplete="off" />
       <div class="time">
-        <div class="tit">시간</div>
+        <div class="tit">남은 시간</div>
         <div class="timers">
-          <span id="tCt"></span>
+          <span class="remaining" id="remaining"></span>
         </div>
       </div>
     </div>
